# FARM-full-stack-web-app-beanie-nextjs

./: models.py
backend/: .env.sample  config.py  database.py  models.py  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/api/routers/: cars.py  users.py
backend/app/core/: background.py  config.py  database.py
backend/routers/: user.py
frontend/: package-lock.json  package.json
frontend/src/: actions.js
frontend/src/app/: layout.js  not-found.js
frontend/src/app/cars/: error.js  page.js
frontend/src/app/cars/[id]/: page.js
frontend/src/app/login/: page.js
frontend/src/app/private/: page.js
frontend/src/components/: CarForm.js  InputField.js  LoginForm.js  LogoutForm.js  NavBar.js
