[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "beanie==1.26.0",
    "cloudinary==1.40.0",
    "fastapi==0.111.0",
    "fastapi-cors==0.0.6",
    "openai==1.33.0",
    "pydantic-settings>=2.8.1",
    "pyjwt==2.8.0",
    "python-multipart==0.0.9",
    "resend==2.0.0",
    "uvicorn==0.30.1",
]
